Fixed footer text alignment

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -256,7 +256,7 @@ p {
 	}
 
 	h2.top-center {
-		top: -2px;
+		top: 15px;
 	}
 
 	h3{
